# offline-color-card-toolkit

./: .gitignore  README.md  pyproject.toml
docs/: color-card-review-app.md  horizontal_cloud_recognition_plan.md  local-only-recognition-complexity.md  ocr-heuristic-risk-analysis.md  rapidocr-input-channel-investigation.md  转平贴底纸模板.docx
docs/requirements/: README.md  feature-01-stack-to-flat-template.md  feature-02-main-image-crop-rename.md  feature-03-spu-label-template.md  feature-04-color-card-scan-rename.md
docs/superpowers/plans/: 2026-06-08-stack-to-flat-template.md  2026-06-10-image-rename-and-crop.md  2026-06-10-spu-label-template.md  2026-06-11-image-batch-worker.md
packaging/: pyinstaller.spec
scripts/: install_windows.ps1  prelabel_color_card_yolo.py  start_review_app.ps1  uninstall_windows.ps1
src/color_card_toolkit/: __init__.py  main.py
src/color_card_toolkit/core/: __init__.py  cloud_recognition.py  color_code_parser.py  grouping.py  image_rename.py  layout_detection.py  models.py  ocr_engine.py  recognition.py  recognition_logging.py  recognition_settings.py  resources.py  spu_label_generator.py  word_generator.py
src/color_card_toolkit/review_app/: __init__.py  __main__.py  data.py  server.py
src/color_card_toolkit/review_app/static/: app.js  (+2 more)
src/color_card_toolkit/ui/: __init__.py  batch_worker.py  main_image_crop_page.py  main_window.py  scan_rename_page.py  spu_label_page.py  stack_to_flat_page.py
tests/: test_batch_worker.py  test_cloud_recognition.py  test_color_code_parser.py  test_grouping.py  test_image_rename.py  test_image_workflow_pages.py  test_layout_detection.py  test_ocr_engine.py  test_recognition.py  test_recognition_logging.py  test_recognition_settings.py  test_spu_label_generator.py  test_spu_label_page.py  test_stack_to_flat_page.py  test_stack_to_flat_workflow.py  test_word_generator.py
(+1 files in other folders)
