[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-color-card-toolkit"
version = "0.1.0"
description = "线下色卡采集、图片改名、截图和不干胶模板生成工具集"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "python-docx>=1.1.2",
    "Pillow>=10.0",
    "opencv-python>=4.9",
    "rapidocr-onnxruntime>=1.3.24",
    "ultralytics>=8.4.69",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
packaging = [
    "pyinstaller>=6.0",
]

[project.scripts]
color-card-toolkit = "color_card_toolkit.main:main"
color-card-review-app = "color_card_toolkit.review_app.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
color_card_toolkit = ["resources/templates/*.docx", "resources/models/*.pt", "review_app/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
